--- a/template/package.json
+++ b/template/package.json
@@ -10,17 +10,17 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@react-navigation/bottom-tabs": "^6.3.1",
-    "@react-navigation/native": "^6.0.10",
-    "@react-navigation/stack": "^6.2.1",
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/stack": "^6.3.2",
     "axios": "^0.27.2",
-    "react": "18.0.0",
-    "react-native": "0.69.1",
+    "react": "18.1.0",
+    "react-native": "0.70.2",
     "react-native-bootsplash": "^4.2.3",
     "react-native-device-info": "^9.0.2",
-    "react-native-gesture-handler": "^2.5.0",
-    "react-native-safe-area-context": "^4.3.1",
-    "react-native-screens": "^3.14.0"
+    "react-native-gesture-handler": "^2.7.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -40,11 +40,11 @@
     "eslint-plugin-react-native": "^4.0.0",
     "eslint-plugin-react-native-a11y": "^3.2.1",
     "jest": "^27.5.1",
-    "metro-react-native-babel-preset": "^0.71.1",
+    "metro-react-native-babel-preset": "0.72.3",
     "msw": "^0.39.2",
     "prettier": "^2.6.2",
     "react-native-url-polyfill": "^1.3.0",
-    "react-test-renderer": "18.0.0",
+    "react-test-renderer": "18.1.0",
     "typescript": "^4.7.4"
   },
   "resolutions": {
