--- a/template/package.json
+++ b/template/package.json
@@ -23,31 +23,28 @@
     "react-native-screens": "^3.18.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^3.0.2",
-    "@testing-library/jest-native": "^4.0.5",
-    "@testing-library/react-native": "^9.1.0",
-    "@types/jest": "^27.5.1",
-    "@types/react-native": "^0.67.3",
+    "@babel/core": "^7.19.3",
+    "@babel/runtime": "^7.19.0",
+    "@react-native-community/eslint-config": "^3.1.0",
+    "@testing-library/jest-native": "^5.0.0",
+    "@testing-library/react-native": "^11.2.0",
+    "@types/jest": "^29.1.2",
+    "@types/react-native": "^0.70.4",
     "@types/react-test-renderer": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.28.0",
-    "@typescript-eslint/parser": "^5.28.0",
-    "babel-jest": "^27.5.1",
+    "@typescript-eslint/eslint-plugin": "^5.39.0",
+    "@typescript-eslint/parser": "^5.39.0",
+    "babel-jest": "^29.1.2",
     "babel-plugin-module-resolver": "^4.1.0",
-    "eslint": "^8.18.0",
+    "eslint": "^8.25.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react-native": "^4.0.0",
     "eslint-plugin-react-native-a11y": "^3.2.1",
-    "jest": "^27.5.1",
-    "metro-react-native-babel-preset": "0.72.3",
-    "msw": "^0.39.2",
-    "prettier": "^2.6.2",
+    "jest": "^29.1.2",
+    "metro-react-native-babel-preset": "^0.73.1",
+    "msw": "^0.47.4",
+    "prettier": "^2.7.1",
     "react-native-url-polyfill": "^1.3.0",
     "react-test-renderer": "18.1.0",
-    "typescript": "^4.7.4"
-  },
-  "resolutions": {
-    "@types/react": "^17"
+    "typescript": "^4.8.4"
   }
 }
