--- a/template/.eslintrc.json
+++ b/template/.eslintrc.json
@@ -33,6 +33,7 @@
     "tsconfigRootDir": "./"
   },
   "rules": {
+    "react/self-closing-comp": 2,
     "react/jsx-curly-brace-presence": [2, { "props": "never", "children": "ignore" }],
     "react/react-in-jsx-scope": 0,
     "react/display-name": ["off"],
