--- a/template/package.json
+++ b/template/package.json
@@ -6,45 +6,47 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
-    "test": "jest --coverage",
+    "test": "node --expose-gc --no-compilation-cache ./node_modules/.bin/jest --coverage --no-watchman",
+    "test:ci-coverage": "node -v && node --expose-gc --no-compilation-cache ./node_modules/.bin/jest --maxWorkers 2 --no-watchman --silent --coverage",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@react-navigation/bottom-tabs": "^6.4.0",
-    "@react-navigation/native": "^6.0.13",
-    "@react-navigation/stack": "^6.3.2",
-    "axios": "^0.27.2",
+    "@react-navigation/bottom-tabs": "^6.5.2",
+    "@react-navigation/native": "^6.1.1",
+    "@react-navigation/stack": "^6.3.10",
+    "axios": "^1.2.2",
     "react": "18.1.0",
-    "react-native": "0.70.2",
-    "react-native-bootsplash": "^4.2.3",
-    "react-native-device-info": "^9.0.2",
-    "react-native-gesture-handler": "^2.7.0",
+    "react-native": "0.70.6",
+    "react-native-bootsplash": "^4.4.0",
+    "react-native-device-info": "^10.3.0",
+    "react-native-gesture-handler": "^2.8.0",
     "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.0"
+    "react-native-screens": "^3.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
     "@babel/runtime": "^7.19.0",
-    "@react-native-community/eslint-config": "^3.1.0",
+    "@react-native-community/eslint-config": "^3.2.0",
     "@testing-library/jest-native": "^5.0.0",
     "@testing-library/react-native": "^11.2.0",
     "@types/jest": "^29.1.2",
     "@types/react-native": "^0.70.4",
     "@types/react-test-renderer": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.39.0",
-    "@typescript-eslint/parser": "^5.39.0",
+    "@typescript-eslint/eslint-plugin": "^5.47.1",
+    "@typescript-eslint/parser": "^5.47.1",
     "babel-jest": "^29.1.2",
     "babel-plugin-module-resolver": "^4.1.0",
-    "eslint": "^8.25.0",
+    "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-jest": "^27.2.0",
     "eslint-plugin-react-native": "^4.0.0",
-    "eslint-plugin-react-native-a11y": "^3.2.1",
+    "eslint-plugin-react-native-a11y": "^3.3.0",
     "jest": "^29.1.2",
     "metro-react-native-babel-preset": "^0.73.1",
     "msw": "^0.47.4",
     "prettier": "^2.7.1",
     "react-native-url-polyfill": "^1.3.0",
     "react-test-renderer": "18.1.0",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.4"
   }
 }
