--- a/template/package.json
+++ b/template/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "awesometsproject",
+  "name": "AwesomeTSProject",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -27,24 +27,24 @@
     "@babel/core": "^7.19.3",
     "@babel/runtime": "^7.19.0",
     "@react-native-community/eslint-config": "^3.2.0",
-    "@testing-library/jest-native": "^5.0.0",
-    "@testing-library/react-native": "^11.2.0",
-    "@types/jest": "^29.1.2",
+    "@testing-library/jest-native": "^5.4.1",
+    "@testing-library/react-native": "^11.5.0",
+    "@types/jest": "^29.2.5",
     "@types/react-native": "^0.70.4",
     "@types/react-test-renderer": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.47.1",
-    "@typescript-eslint/parser": "^5.47.1",
-    "babel-jest": "^29.1.2",
+    "@typescript-eslint/eslint-plugin": "^5.48.1",
+    "@typescript-eslint/parser": "^5.48.1",
+    "babel-jest": "^29.3.1",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^8.31.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-jest": "^27.2.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-react-native": "^4.0.0",
     "eslint-plugin-react-native-a11y": "^3.3.0",
-    "jest": "^29.1.2",
+    "jest": "^29.3.1",
     "metro-react-native-babel-preset": "^0.73.1",
     "msw": "^0.47.4",
-    "prettier": "^2.7.1",
+    "prettier": "^2.8.3",
     "react-native-url-polyfill": "^1.3.0",
     "react-test-renderer": "18.1.0",
     "typescript": "^4.9.4"
