--- a/template/package.json
+++ b/template/package.json
@@ -1,52 +1,54 @@
 {
-  "name": "AwesomeTSProject",
+  "name": "awesometsproject",
   "version": "0.0.1",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "start": "react-native start",
     "test": "node --expose-gc --no-compilation-cache ./node_modules/.bin/jest --coverage --no-watchman",
-    "test:ci-coverage": "node -v && node --expose-gc --no-compilation-cache ./node_modules/.bin/jest --maxWorkers 2 --no-watchman --silent --coverage",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "test:ci-coverage": "node -v && node --expose-gc --no-compilation-cache ./node_modules/.bin/jest --maxWorkers 2 --no-watchman --silent --coverage"
   },
   "dependencies": {
-    "@react-navigation/bottom-tabs": "^6.5.2",
-    "@react-navigation/native": "^6.1.1",
-    "@react-navigation/stack": "^6.3.10",
-    "axios": "^1.2.2",
-    "react": "18.1.0",
-    "react-native": "0.70.6",
-    "react-native-bootsplash": "^4.4.0",
-    "react-native-device-info": "^10.3.0",
-    "react-native-gesture-handler": "^2.8.0",
-    "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.2"
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^6.3.16",
+    "axios": "^1.3.4",
+    "react": "18.2.0",
+    "react-native": "0.71.3",
+    "react-native-bootsplash": "^4.5.2",
+    "react-native-device-info": "^10.4.0",
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.20.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.3",
-    "@babel/runtime": "^7.19.0",
+    "@babel/core": "^7.20.0",
+    "@babel/preset-env": "^7.20.0",
+    "@babel/runtime": "^7.20.0",
     "@react-native-community/eslint-config": "^3.2.0",
-    "@testing-library/jest-native": "^5.4.1",
-    "@testing-library/react-native": "^11.5.0",
-    "@types/jest": "^29.2.5",
-    "@types/react-native": "^0.70.4",
+    "@testing-library/jest-native": "^5.4.2",
+    "@testing-library/react-native": "^12.0.0-rc.2",
+    "@tsconfig/react-native": "^2.0.3",
+    "@types/jest": "^29.4.0",
+    "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.48.1",
-    "@typescript-eslint/parser": "^5.48.1",
-    "babel-jest": "^29.3.1",
-    "babel-plugin-module-resolver": "^4.1.0",
-    "eslint": "^8.31.0",
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "@typescript-eslint/parser": "^5.54.0",
+    "babel-jest": "^29.4.3",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "eslint": "^8.35.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-react-native": "^4.0.0",
     "eslint-plugin-react-native-a11y": "^3.3.0",
-    "jest": "^29.3.1",
-    "metro-react-native-babel-preset": "^0.73.1",
-    "msw": "^0.47.4",
-    "prettier": "^2.8.3",
+    "jest": "^29.4.3",
+    "metro-react-native-babel-preset": "0.73.7",
+    "msw": "^1.1.0",
+    "prettier": "^2.8.4",
     "react-native-url-polyfill": "^1.3.0",
-    "react-test-renderer": "18.1.0",
-    "typescript": "^4.9.4"
+    "react-test-renderer": "18.2.0",
+    "typescript": "4.8.4"
   }
 }
